[gd_scene load_steps=2 format=3 uid="uid://bfdldojk5i6u3"]

[ext_resource type="Script" path="res://addons/fmod/tool/ui/ParameterDisplay.gd" id="1_fxyw8"]

[node name="ParameterDisplay" type="HBoxContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -58.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_fxyw8")

[node name="TitlesContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NameTitle" type="Label" parent="TitlesContainer"]
layout_mode = 2
text = "Name: "

[node name="IdTitle" type="Label" parent="TitlesContainer"]
layout_mode = 2
text = "ID: "

[node name="RangeTitle" type="Label" parent="TitlesContainer"]
layout_mode = 2
text = "Range: "

[node name="DefaultValueTitle" type="Label" parent="TitlesContainer"]
layout_mode = 2
text = "Default value: "

[node name="ValuesContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="ValuesContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="IdLabel" type="Label" parent="ValuesContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="RangeLabel" type="Label" parent="ValuesContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="DefaultValueLabel" type="Label" parent="ValuesContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NameCopyButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Copy"

[node name="IdCopyButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Copy"
